[package]
name = "rust-backup"
version = "0.1.0"
authors = ["Hmiya6 <h.miya.work@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {version = "1.0"}
toml = {version = "0.5"}
serde = {version = "1.0", features = ["derive"]}
walkdir = {version = "2"}
tempdir = {version = "0.3"}
sha2 = {version = "0.9"}
zip = {version = "0.5"}
chrono = {version = "0.4"}
